<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/md_magnify"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_new_video"
        android:title="@string/record"
        android:icon="@drawable/md_camcorder"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_video"
        android:title="@string/add_video"
        android:icon="@drawable/md_folder"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_read_qrcode"
        android:title="@string/read_qr_code"
        android:icon="@drawable/md_qr_code"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_login"
        android:title="@string/login"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>
