<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/button_group">
        <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/search"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:showAsAction="collapseActionView|ifRoom|withText" />

        <item
            android:id="@+id/action_manage_groups"
            android:icon="@drawable/ic_group_white_24dp"
            android:title="@string/manage_groups"
            app:showAsAction="ifRoom|withText" />

        <item
            android:id="@+id/action_login"
            android:title="@string/login"
            app:showAsAction="ifRoom|withText" />

        <item
            android:id="@+id/action_import_video"
            android:icon="@drawable/ic_add_to_photos_white_24dp"
            android:title="@string/import_video"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_settings"
            android:title="@string/settings"
            app:showAsAction="never|withText" />

        <item
            android:id="@+id/action_logout"
            android:title="@string/logout"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/info_group" android:enabled="false">
        <item
            android:id="@+id/info_loggedinas"
            android:title=""
            app:showAsAction="never"/>
        <item
            android:id="@+id/info_email"
            android:title=""
            app:showAsAction="never" />
     </group>
</menu>
